--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
+    "mongoose": "^8.3.0",
     "nodemailer": "^6.9.13",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
