--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.12.5",
     "@types/nodemailer": "^6.4.14",
     "@types/uuid": "^9.0.8",
